# Tesseract4Android

./: .gitignore  .gitmodules  README.md  build.gradle  build.gradle.kts  gradle.properties  jitpack.yml  publish-local.gradle  publish.gradle  settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/androidTest/java/cz/adaptech/android/tesseract4androidexample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cz/adaptech/android/tesseract4androidexample/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
leptonica/: build.gradle
leptonica/src/main/cpp/: CMakeLists.txt
leptonica/src/main/cpp/leptonica/: .gitignore  CMakeLists.txt
leptonica/src/main/cpp/leptonica/include/: endianness.h
leptonica/src/main/cpp/leptonica/src/: Makefile.in  aclocal.m4  configure
leptonica/src/main/cpp/leptonica/src/autom4te.cache/: requests  traces.0  traces.1  traces.2
leptonica/src/main/cpp/leptonica/src/config/: config.h.in
leptonica/src/main/cpp/leptonica/src/src/: Makefile.in
leptonica/src/main/cpp/libjpeg/: CMakeLists.txt
leptonica/src/main/cpp/libpng/: .gitignore  CMakeLists.txt
sample/: build.gradle  build.gradle.kts
sample/src/androidTest/java/cz/adaptech/tesseract4android/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/cz/adaptech/tesseract4android/sample/: Assets.java  Assets.kt  Config.java  Config.kt  MainActivity.java  MainActivity.kt  OCRState.kt
sample/src/main/java/cz/adaptech/tesseract4android/sample/ui/main/: MainFragment.java  MainFragment.kt  MainView.kt  MainViewModel.java  MainViewModel.kt
sample/src/main/java/cz/adaptech/tesseract4android/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
sample/src/main/res/layout/: fragment_main.xml
sample/src/main/res/layout-land/: fragment_main.xml
sample/src/main/res/values/: strings.xml  themes.xml
sample/src/main/res/values-night/: themes.xml
sample/src/test/java/cz/adaptech/tesseract4android/sample/: ExampleUnitTest.java
tesseract/: build.gradle
tesseract/src/main/cpp/: CMakeLists.txt
tesseract/src/main/cpp/tesseract/: CMakeLists.txt
tesseract4android/: build.gradle  build.gradle.kts
tesseract4android/src/androidTest/: AndroidManifest.xml
tesseract4android/src/androidTest/java/com/googlecode/leptonica/android/: AdaptiveMapTest.java  BinarizeTest.java  BoxTest.java  BoxaTest.java  ClipTest.java  ConvertTest.java  EdgeTest.java  EnhanceTest.java  GrayQuantTest.java  JpegIOTest.java  PixTest.java  PixaTest.java  ReadFileTest.java  RotateTest.java  ScaleTest.java  SkewTest.java  TestUtils.java  WriteFileTest.java
tesseract4android/src/androidTest/java/com/googlecode/leptonica/android/test/: AdaptiveMapTest.java  BinarizeTest.java  BoxTest.java  BoxaTest.java  ClipTest.java  ConvertTest.java  EdgeTest.java  EnhanceTest.java  GrayQuantTest.java  JpegIOTest.java  PixTest.java  PixaTest.java  ReadFileTest.java  RotateTest.java  ScaleTest.java  SkewTest.java  WriteFileTest.java
tesseract4android/src/androidTest/java/com/googlecode/tesseract/android/: Assets.java  TessBaseAPITest.java  TessPdfRendererTest.java  TestUtils.java
tesseract4android/src/androidTest/java/com/googlecode/tesseract/android/test/: AllTests.java  TessBaseAPITest.java  TessPdfRendererTest.java  TestUtils.java
tesseract4android/src/androidTest/java/cz/adaptech/android/tesseract4android/: ExampleInstrumentedTest.java
tesseract4android/src/main/: AndroidManifest.xml
tesseract4android/src/main/cpp/: CMakeLists.txt  common.h  jni.cpp
tesseract4android/src/main/cpp/leptonica/: .gitignore  CMakeLists.txt  box.cpp  boxa.cpp  common.h  endianness.h.in  jni.cpp  pix.cpp  pixa.cpp  readfile.cpp  utilities.cpp  writefile.cpp
tesseract4android/src/main/cpp/leptonica/src/: Makefile.in  aclocal.m4  configure
tesseract4android/src/main/cpp/leptonica/src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
tesseract4android/src/main/cpp/leptonica/src/config/: config.h.in
tesseract4android/src/main/cpp/leptonica/src/prog/: Makefile.in  junkpixt
tesseract4android/src/main/cpp/leptonica/src/src/: Makefile.in  allheaders.h  bmpio.c  encoding.c  jpegio.c  pdfio2.c  pngio.c
tesseract4android/src/main/cpp/libjpeg/: CMakeLists.txt
tesseract4android/src/main/cpp/libjpeg/src/: makeasln.v16  makecvcx.v16  makedvcx.v16  makejsln.v16  makejvcx.v16  makervcx.v16  maketvcx.v16  makewvcx.v16
tesseract4android/src/main/cpp/libpng/: CMakeLists.txt
tesseract4android/src/main/cpp/libpng/src/: .gitignore
tesseract4android/src/main/cpp/libpng/src/scripts/: dfn.awk
tesseract4android/src/main/cpp/tesseract/: CMakeLists.txt  common.h  config_auto.h.in  pageiterator.cpp  resultiterator.cpp  tessbaseapi.cpp
tesseract4android/src/main/cpp/tesseract/src/langtests/: .gitignore
tesseract4android/src/main/cpp/tesseract/src/src/api/: baseapi.cpp  pdfrenderer.cpp
tesseract4android/src/main/cpp/tesseract/src/src/ccmain/: control.cpp
tesseract4android/src/main/java/com/googlecode/leptonica/android/: AdaptiveMap.java  Binarize.java  Box.java  Boxa.java  Clip.java  Constants.java  Convert.java  Edge.java  Enhance.java  GrayQuant.java  JpegIO.java  MorphApp.java  Pix.java  Pixa.java  ReadFile.java  Rotate.java  Scale.java  Skew.java  WriteFile.java
tesseract4android/src/main/java/com/googlecode/tesseract/android/: PageIterator.java  ResultIterator.java  TessBaseAPI.java  TessPdfRenderer.java
tesseract4android/src/main/res/values/: strings.xml
tesseract4android/src/test/java/cz/adaptech/android/tesseract4android/: ExampleUnitTest.java
